--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Why Footprints Preschool?</h2>
+        <h2 class="title-text mb-4 text-center">Why Footprints Preschool?</h2>
        <div class="row row-cols-2 row-cols-md-3 g-3"> 
         <div class="col">
           <div class="card h-100">
@@ -136,7 +136,7 @@
 
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Our Network</h2>
+        <h2 class="title-text mb-4 text-center">Our Network</h2>
        <div class="row row-cols-3 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100">
@@ -169,7 +169,7 @@
 
 <section class="py-4">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Safety First</h2>
+        <h2 class="title-text mb-4 text-center">Safety First</h2>
        <div class="row row-cols-2 row-cols-md-4 g-3">
         <div class="col">
           <div class="card h-100">
@@ -218,14 +218,14 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h3 class="fw-semibold fs-5 mb-4 text-center">What parents Speak About Footprints?</h3>
+      <h3 class="title-text mb-4 text-center">What parents Speak About Footprints?</h3>
       <video loop="" controls="" muted="" poster="assets/poster.jpg" class="img-fluid"><source src="https://www.footprintseducation.in/ad/desktop/assets/video/Parent Speak.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
   </div>
 </section>
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Programs</h2>
+        <h2 class="title-text mb-4 text-center">Programs</h2>
        <div class="row row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100">
