--- a/page-2.html
+++ b/page-2.html
@@ -35,11 +35,10 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#20c1e0">
 
-    
+    <link rel="stylesheet" type="text/css" href="assets/vendor/tiny-slider/tiny-slider.css">
+
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="assets/vendor/tiny-slider/tiny-slider.css">
 
   </head>
   <body>
@@ -56,15 +55,7 @@
 <!--  -->
 <section class="masthead">
     <div class="container">
-        <h1 class="masthead-heading">Geetanjali Enclave Franchise in New Delhi with 100% Guaranteed Success</h1>
-        <!-- <div class="masthead-subheading review-info">
-          <ul class="list-group list-group-flush list-group-horizontal justify-content-center">
-            <li class="list-inline-item">4.6</li>
-            <li class="list-inline-item stars">
-              <span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-half">☆</span> </li>
-             <li class="list-inline-item">116 Reviews</li>
-          </ul>
-        </div> -->
+        <h1 class="masthead-heading">Now A Geetanjali Enclave Franchise in New Delhi with 100% Guaranteed Success</h1>
         <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
         <p class="mt-3">Investment starts from Rs 40 Lakhs*</p>
     </div>
@@ -72,59 +63,59 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h2 class="fw-semibold fs-5 mb-4 text-center">Why Choose Footprints Franchise</h2>
+      <h2 class="title-text mb-4 text-center">Why Choose Footprints Franchise</h2>
      <div class="row row-cols-2 row-cols-md-3 g-3">
       <div class="col">
-        <div class="card h-100">
+        <div class="card border-0 shadow h-100">
           <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-semibold">40% Annual Return</h3>
-            <p>Earn as much as 20 Lacs per year in Profit</p>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">40% Annual Return</h3>
+            <p class="main-para">Earn as much as 20 Lacs per year in Profit</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card border-0 shadow h-100">
           <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-semibold">No Royalty Till 40 Children</h3>
-            <p>Pay Royalty only when you are profitable</p>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">No Royalty Till 40 Children</h3>
+            <p class="main-para">Pay Royalty only when you are profitable</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card border-0 shadow h-100">
           <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-semibold">120 Admissions Guaranteed</h3>
-            <p>In 2 Years or else get compensation</p>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">120 Admissions Guaranteed</h3>
+            <p class="main-para">In 2 Years or else get compensation</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card border-0 shadow h-100">
           <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-semibold">Option to Sell Back</h3>
-            <p>Sell the centre back at 4 times profit</p>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">Option to Sell Back</h3>
+            <p class="main-para">Sell the centre back at 4 times profit</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card border-0 shadow h-100">
           <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-semibold">100% Success Rate</h3>
-            <p>Zero Closed-Down centres till date</p>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">100% Success Rate</h3>
+            <p class="main-para">Zero Closed-Down centres till date</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card border-0 shadow h-100">
           <img src="assets/trust.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-semibold">Partnership Model</h3>
-            <p>Marketing, Technology, Hiring support with a complete handholding</p>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">Partnership Model</h3>
+            <p class="main-para">Marketing, Technology, Hiring support with a complete handholding</p>
           </div>
         </div>
       </div>
@@ -145,7 +136,7 @@
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Our Network</h2>
+        <h3 class="title-text mb-4 text-center">Our Network</h3>
         <div class="row g-3">
           <div class="col-6 col-sm-4 col-xl-4">
               <div class="d-flex justify-content-center align-items-center p-3 bg-warning bg-opacity-10 rounded-3">
@@ -189,10 +180,10 @@
 <!--  -->
 <section class="py-4">
   <div class="container">
-      <h3 class="fw-semibold fs-5 mb-4 text-center">Welcome To Footprints Center</h3>
+      <h3 class="title-text mb-4 text-center">Welcome To Footprints Center</h3>
       <div class="row justify-content-center">
         <div class="col-lg-9">
-          <div class="card card-body shadow" id="v1">
+          <div class="card card-body px-2 shadow" id="v1">
             <video width='100%' autoplay muted loop playsinline preload='metadata'>
               <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Franchise-Center-Tour.mp4' type='video/mp4'>
             </video>
@@ -205,12 +196,12 @@
 <!--  -->
 <section class="py-4">
   <div class="container">
-      <h2 class="fw-semibold fs-5 mb-4 text-center">Safety First</h2>
+      <h3 class="title-text mb-4 text-center">Safety First</h3>
      <div class="row row-cols-2 row-cols-md-4 g-3">
       <div class="col">
         <div class="card h-100">
           <img src="assets/Flooring-and-furniture.jpg" class="icon-img-top" alt="Flooring and furniture">
-          <div class="card-body">
+          <div class="card-body px-2">
             <h3 class="card-title fs-6 fw-semibold">Childproofed Flooring and furniture</h3>
           </div>
         </div>
@@ -218,7 +209,7 @@
       <div class="col">
         <div class="card h-100">
           <img src="assets/Checked-Staff.jpg" class="icon-img-top" alt="Background Checked Staff">
-          <div class="card-body">
+          <div class="card-body px-2">
             <h3 class="card-title fs-6 fw-semibold">Background Checked Staff</h3>
           </div>
         </div>
@@ -226,7 +217,7 @@
       <div class="col">
         <div class="card h-100">
           <img src="assets/all-staff.jpg" class="icon-img-top" alt="All Women Staff">
-          <div class="card-body">
+          <div class="card-body px-2">
             <h3 class="card-title fs-6 fw-semibold">All Women Staff inside the center</h3>
           </div>
         </div>
@@ -234,7 +225,7 @@
       <div class="col">
           <div class="card h-100">
             <img src="assets/No-entry.jpg" class="icon-img-top" alt="No-Entry">
-            <div class="card-body">
+            <div class="card-body px-2">
               <h3 class="card-title fs-6 fw-semibold">No-Entry without registration</h3>
             </div>
           </div>
@@ -255,10 +246,10 @@
 <!--  -->
 <section class="py-4">
     <div class="container">
-        <h3 class="fw-semibold fs-5 mb-4 text-center">Our Happy Franchise Owners</h3>
+        <h3 class="title-text mb-4 text-center">Our Happy Franchise Owners</h3>
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <div class="card card-body shadow" id="v1">
+            <div class="card card-body px-2 shadow" id="v1">
               <video width='100%' autoplay muted loop playsinline preload='metadata'>
                 <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Footprints-Franchise-Founders-Speak.mp4' type='video/mp4'>
               </video>
@@ -283,7 +274,7 @@
   <div class="container">
       <div class="row mb-3">
           <div class="col-md-12 text-center mx-auto">
-              <h2>Media <span class="text-info">Coverage</span></h2>
+              <h3 class="title-text mb-4 text-center">Media Coverage</h3>
           </div>
       </div>
       <div class="row justify-content-center my-4">
@@ -308,45 +299,45 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h3 class="fw-semibold fs-5 mb-4 text-center">Awards</h3>
+      <h3 class="title-text mb-4 text-center">Awards</h3>
      <div class="row row-cols-2 row-cols-md-4 g-3">
       <div class="col">
         <div class="card h-100">
           <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-bold">2023</h3>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">2023</h3>
             <p class="mb-2 h6">Leading Preschool in India</p>
-            <p>by BW Education</p>
+            <p class="main-para">by BW Education</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
           <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-bold">2018</h3>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">2018</h3>
             <p class="mb-2 h6">Best Preschool</p>
-            <p>by Silicon India</p>
+            <p class="main-para">by Silicon India</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
           <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-bold">2023</h3>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">2023</h3>
             <p class="mb-2 h6">Innovation for Curriculum</p>
-            <p>for Preschool by BW Education</p>
+            <p class="main-para">for Preschool by BW Education</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
           <img src="assets/winner.svg" class="icon-img mt-3 m-auto" alt="winner" width="80px" height="80px">
-          <div class="card-body">
-            <h3 class="card-title fs-6 fw-bold">2017</h3>
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">2017</h3>
             <p class="mb-2 h6">Best Preschool by Brainfeed</p>
-            <p>School Excellence Awards</p>
+            <p class="main-para">School Excellence Awards</p>
           </div>
         </div>
       </div>
@@ -366,42 +357,42 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h3 class="fw-semibold fs-5 mb-4 text-center">Our Team </h3>
+      <h3 class="title-text mb-4 text-center">Our Team </h3>
       <!--  -->
       <div class="row row-cols-2 row-cols-md-4 g-4">
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
-            <div class="card-body">
-              <h5 class="card-title">Raj Singhal</h5>
-              <p class="card-text">CEO, B.Tech - IIT-Delhi</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Raj Singhal</h5>
+              <p class="card-text main-para">CEO, B.Tech - IIT-Delhi</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
-            <div class="card-body">
-              <h5 class="card-title">Purvesh Sharma</h5>
-              <p class="card-text">COO, B.Tech- IIT-Delhi</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Purvesh Sharma</h5>
+              <p class="card-text main-para">COO, B.Tech- IIT-Delhi</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
-            <div class="card-body">
-              <h5 class="card-title">Ashish Aggarwal</h5>
-              <p class="card-text">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Ashish Aggarwal</h5>
+              <p class="card-text main-para">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
-            <div class="card-body">
-              <h5 class="card-title">Amita Bhardwaj</h5>
-              <p class="card-text">Chief Delivery Officer</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Amita Bhardwaj</h5>
+              <p class="card-text main-para">Chief Delivery Officer</p>
             </div>
           </div>
         </div>
@@ -414,6 +405,7 @@
 <section>
   <div class="container">
       <!--  -->
+      <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
         <div class="row justify-content-center my-2">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
