--- a/page-1.html
+++ b/page-1.html
@@ -57,15 +57,7 @@
 <section class="masthead">
     <div class="container">
         <h1 class="masthead-heading">Now A Geetanjali Enclave Franchise in New Delhi with 100% Guaranteed Success</h1>
-        <!-- <div class="masthead-subheading review-info">
-          <ul class="list-group list-group-flush list-group-horizontal justify-content-center">
-            <li class="list-inline-item">4.6</li>
-            <li class="list-inline-item stars">
-              <span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-full">☆</span><span class="star-icon stars-half">☆</span> </li>
-             <li class="list-inline-item">116 Reviews</li>
-          </ul>
-        </div> -->
-        <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">View Fees</a>
+        <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
         <p class="mt-3">Investment starts from Rs 40 Lakhs*</p>
     </div>
 </section>
@@ -73,7 +65,7 @@
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Why Choose Footprints?</h2>
+        <h2 class="title-text mb-4 text-center">Why Choose Footprints?</h2>
        <div class="row row-cols-2 row-cols-md-3 g-3"> 
         <div class="col">
           <div class="card h-100">
@@ -108,20 +100,20 @@
 <!--  -->
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-3 text-center">What Our Franchisees Say?</h2>
-        <p class="text-center">Join Us In shaping the future of early education</p>
+        <h2 class="title-text mb-4 text-center">What Our Franchisees Say?</h2>
         <div class="row">
           <div class="col">
             <img src="assets/partners-speak.jpg" alt="partners-speak" class="img-fluid">
           </div>
         </div>
+        <p class="text-center mt-3 mb-0">Join Us In shaping the future of early education</p>
     </div>
 </section>
 <!--  -->
 <section class="py-2 cta-block">
     <div class="container">
           <div class="d-flex gap-2 justify-content-center">
-            <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">View Fees</a>
+            <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
           </div>
           <p class="mt-3 text-center">Investment starts from Rs 40 Lakhs*</p>
     </div>
@@ -130,7 +122,7 @@
 
 <section class="py-4 text-center">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Why Choose Footprints Franchise</h2>
+        <h2 class="title-text mb-4 text-center">Why Choose Footprints Franchise</h2>
        <div class="row row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100">
@@ -193,7 +185,7 @@
 
 <section class="py-4">
     <div class="container">
-        <h2 class="fw-semibold fs-5 mb-4 text-center">Welcome To Footprints Center </h2>
+        <h2 class="title-text mb-4 text-center">Welcome To Footprints Center </h2>
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <div class="card card-body shadow" id="v1">
@@ -218,7 +210,7 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h3 class="fw-semibold fs-5 mb-4 text-center">Our Team </h3>
+      <h3 class="title-text mb-4 text-center">Our Team </h3>
       <!--  -->
       <div class="row row-cols-2 row-cols-md-4 g-4">
         <div class="col">
@@ -266,6 +258,7 @@
 <section>
   <div class="container">
       <!--  -->
+      <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
         <div class="row justify-content-center my-2">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
@@ -328,7 +321,7 @@
 <!--  -->
 <section class="footer mt-auto fixed-bottom">
         <div class="d-flex">
-            <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">View Fees</a>
+            <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Enquire Now</a>
             <a href="#" class="btn btn-secondary py-3 flex-fill text-white fw-semibold rounded-0">Apply Now</a>
         </div>
   </section>
