--- a/page-1.html
+++ b/page-1.html
@@ -68,29 +68,29 @@
         <h2 class="title-text mb-4 text-center">Why Choose Footprints?</h2>
        <div class="row row-cols-2 row-cols-md-3 g-3"> 
         <div class="col">
-          <div class="card h-100">
+          <div class="card border-0 shadow h-100">
             <img src="assets/success.svg" class="icon-img mt-3 m-auto" alt="success" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">100% Success Rate</h3>
-              <p>No Closed down centers shows our commitment and partnership with Franchisee</p>
+            <div class="card-body px-2">
+              <h3 class="card-title main-title">100% Success Rate</h3>
+              <p class="main-para">No Closed down centers shows our commitment and partnership with Franchisee</p>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
+          <div class="card border-0 shadow h-100">
             <img src="assets/award-wining.svg" class="icon-img mt-3 m-auto" alt="award-wining" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Award Winning</h3>
-              <p>Footprints has won several awards and is recognized as the Leading Preschool in India, Innovation For Curriculum for Preschools In India. </p>
+            <div class="card-body px-2">
+              <h3 class="card-title main-title">Award Winning</h3>
+              <p class="main-para">Footprints has won several awards and is recognized as the Leading Preschool in India, Innovation For Curriculum for Preschools In India. </p>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
+        <div class="col-12 col-auto">
+          <div class="card border-0 shadow h-100">
             <img src="assets/strong-brand.svg" class="icon-img mt-3 m-auto" alt="strong-brand" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Strong Brand</h3>
-              <p>We've been operating for over 10 years and have a strong brand presence across the country.</p>
+            <div class="card-body px-2">
+              <h3 class="card-title main-title">Strong Brand</h3>
+              <p class="main-para">We've been operating for over 10 years and have a strong brand presence across the country.</p>
             </div>
           </div>
         </div>
@@ -121,65 +121,65 @@
 <!--  -->
 
 <section class="py-4 text-center">
-    <div class="container">
-        <h2 class="title-text mb-4 text-center">Why Choose Footprints Franchise</h2>
-       <div class="row row-cols-2 row-cols-md-3 g-3">
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">40% Annual Return</h3>
-              <p>Earn as much as 20 Lacs per year in Profit</p>
-            </div>
+  <div class="container">
+      <h2 class="title-text mb-4 text-center">Why Choose Footprints Franchise</h2>
+     <div class="row row-cols-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">40% Annual Return</h3>
+            <p class="main-para">Earn as much as 20 Lacs per year in Profit</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">No Royalty Till 40 Children</h3>
-              <p>Pay Royalty only when you are profitable</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">No Royalty Till 40 Children</h3>
+            <p class="main-para">Pay Royalty only when you are profitable</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">120 Admissions Guaranteed</h3>
-              <p>In 2 Years or else get compensation</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">120 Admissions Guaranteed</h3>
+            <p class="main-para">In 2 Years or else get compensation</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Option to Sell Back</h3>
-              <p>Sell the centre back at 4 times profit</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">Option to Sell Back</h3>
+            <p class="main-para">Sell the centre back at 4 times profit</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">100% Success Rate</h3>
-              <p>Zero Closed-Down centres till date</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">100% Success Rate</h3>
+            <p class="main-para">Zero Closed-Down centres till date</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/trust.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-            <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">Partnership Model</h3>
-              <p>Marketing, Technology, Hiring support with a complete handholding</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/trust.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
+          <div class="card-body px-2">
+            <h3 class="card-title main-title">Partnership Model</h3>
+            <p class="main-para">Marketing, Technology, Hiring support with a complete handholding</p>
           </div>
         </div>
-       </div>
-    </div>
+      </div>
+     </div>
+  </div>
 </section>
 <!--  -->
 
@@ -216,36 +216,36 @@
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
-            <div class="card-body">
-              <h5 class="card-title">Raj Singhal</h5>
-              <p class="card-text">CEO, B.Tech - IIT-Delhi</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Raj Singhal</h5>
+              <p class="card-text main-para">CEO, B.Tech - IIT-Delhi</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
-            <div class="card-body">
-              <h5 class="card-title">Purvesh Sharma</h5>
-              <p class="card-text">COO, B.Tech- IIT-Delhi</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Purvesh Sharma</h5>
+              <p class="card-text main-para">COO, B.Tech- IIT-Delhi</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
-            <div class="card-body">
-              <h5 class="card-title">Ashish Aggarwal</h5>
-              <p class="card-text">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Ashish Aggarwal</h5>
+              <p class="card-text main-para">CO- Founder, M.Tech-IIT-D, MBA-IIM-C</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
             <img src="assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
-            <div class="card-body">
-              <h5 class="card-title">Amita Bhardwaj</h5>
-              <p class="card-text">Chief Delivery Officer</p>
+            <div class="card-body px-2">
+              <h5 class="card-title main-title">Amita Bhardwaj</h5>
+              <p class="card-text main-para">Chief Delivery Officer</p>
             </div>
           </div>
         </div>
