--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!--  -->
 <section class="py-2 cta-block">
     <div class="container">
-        <div class="d-grid gap-2">
+        <div class="d-flex justify-content-center gap-2">
             <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">View Fees</a>
           </div>
     </div>
@@ -210,7 +210,7 @@
 
 <section class="py-2 cta-block">
     <div class="container">
-        <div class="d-grid gap-2">
+        <div class="d-flex justify-content-center gap-2">
             <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#">View Fees</a>
           </div>
     </div>
@@ -294,11 +294,6 @@
         </div>
   </section>
 <!--  -->
-<script>
-    var video = document.getElementById('myVideo');
-      setTimeout(function() {
-        video.play();
-      }, 2000); // Adjust the delay (in milliseconds) as needed
-</script>
+
     </body>
 </html>
