--- a/page-1.html
+++ b/page-1.html
@@ -56,7 +56,7 @@
 <!--  -->
 <section class="masthead">
     <div class="container">
-        <h1 class="masthead-heading">Now A Geetanjali Enclave Franchise in New Delhi with 100% Guaranteed Success</h1>
+        <h1 class="masthead-heading">Now A Preschool Franchise in New Delhi with 100% Guaranteed Success</h1>
         <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
         <p class="mt-3">Investment starts from Rs 40 Lakhs*</p>
     </div>
