--- a/index.html
+++ b/index.html
@@ -218,8 +218,9 @@
 <!--  -->
 <section class="py-4 text-center">
   <div class="container">
-      <h3 class="title-text mb-4 text-center">What parents Speak About Footprints?</h3>
-      <video loop="" controls="" muted="" poster="assets/poster.jpg" class="img-fluid"><source src="https://www.footprintseducation.in/ad/desktop/assets/video/Parent Speak.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
+      <h3 class="title-text mb-4 text-center">What Parents Speak About Footprints?</h3>
+      <video width='100%' autoplay muted loop controls playsinline preload='metadata'>
+        <source src="https://www.footprintseducation.in/ad/desktop/assets/video/Parent Speak.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
   </div>
 </section>
 <!--  -->
