--- a/page-2.html
+++ b/page-2.html
@@ -184,7 +184,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-9">
           <div class="card card-body px-2 shadow" id="v1">
-            <video width='100%' autoplay muted loop playsinline preload='metadata'>
+            <video width='100%' autoplay muted loop controls playsinline preload='metadata'>
               <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Franchise-Center-Tour.mp4' type='video/mp4'>
             </video>
           </div>
@@ -250,7 +250,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <div class="card card-body px-2 shadow" id="v1">
-              <video width='100%' autoplay muted loop playsinline preload='metadata'>
+              <video width='100%' autoplay muted loop controls playsinline preload='metadata'>
                 <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Footprints-Franchise-Founders-Speak.mp4' type='video/mp4'>
               </video>
             </div>
