--- a/page-1.html
+++ b/page-1.html
@@ -189,7 +189,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <div class="card card-body shadow" id="v1">
-              <video width='100%' autoplay muted loop playsinline preload='metadata'>
+              <video width='100%' autoplay muted loop controls playsinline preload='metadata'>
                 <source src='https://www.footprintseducation.in/landingpage/franchise_v2/assets/images/videos/Franchise-Center-Tour.mp4' type='video/mp4'>
               </video>
             </div>
