--- a/page-1.html
+++ b/page-1.html
@@ -106,7 +106,7 @@
             <img src="assets/partners-speak.webp" alt="partners-speak" class="img-fluid">
           </div>
         </div>
-        <p class="text-center mt-3 mb-0">Join Us In shaping the future of early education</p>
+        <p class="join-us">Join us in shaping the future of early education</p>
     </div>
 </section>
 <!--  -->
@@ -259,7 +259,7 @@
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
-        <div class="row justify-content-center my-2">
+        <div class="row justify-content-center my-2 mb-5">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
                   <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
