--- a/page-2.html
+++ b/page-2.html
@@ -140,7 +140,7 @@
         <div class="row g-3">
           <div class="col-6 col-sm-4 col-xl-4">
               <div class="d-flex justify-content-center align-items-center p-3 bg-warning bg-opacity-10 rounded-3">
-                  <span class="display-6 lh-1 text-warning mb-0"><img src="assets/india.svg" alt="" width="80px" /></span>
+                  <span class="display-6 lh-1 text-warning mb-0"><img src="assets/india.svg" alt="Cities" width="50px" /></span>
                   <div class="ms-3 h6 fw-normal mb-0">
                       <div class="d-flex counter">
                           <h5 class="purecounter mb-0 fw-bold h2" data-purecounter-start="0" data-purecounter-end="18" data-purecounter-delay="200" data-purecounter-duration="0">17</h5>
@@ -152,7 +152,7 @@
       
           <div class="col-6 col-sm-4 col-xl-4">
               <div class="d-flex justify-content-center align-items-center p-3 bg-secondary-subtle bg-opacity-10 rounded-3">
-                  <span class="display-6 lh-1 text-blue mb-0"><img src="assets/school.svg" alt="" width="80px" /></span>
+                  <span class="display-6 lh-1 text-blue mb-0"><img src="assets/school.svg" alt="Centres" width="50px" /></span>
                   <div class="ms-3 h6 fw-normal mb-0">
                       <div class="d-flex counter">
                           <h5 class="purecounter mb-0 fw-bold h2" data-purecounter-start="0" data-purecounter-end="126" data-purecounter-delay="200" data-purecounter-duration="0">119</h5>
@@ -164,7 +164,7 @@
       
           <div class="col-sm-4 col-xl-4">
               <div class="d-flex justify-content-center align-items-center p-3 bg-info-subtle bg-opacity-10 rounded-3">
-                  <span class="display-6 lh-1 text-purple mb-0"><img src="assets/family.svg" alt="" width="80px" /></span>
+                  <span class="display-6 lh-1 text-purple mb-0"><img src="assets/family.svg" alt="Delighted Parents" width="50px" /></span>
                   <div class="ms-4 h6 fw-normal mb-0">
                       <div class="d-flex counter">
                           <h5 class="purecounter mb-0 fw-bold h2" data-purecounter-start="0" data-purecounter-end="38345" data-purecounter-delay="200" data-purecounter-duration="0">37252</h5>
@@ -173,7 +173,7 @@
                   </div>
               </div>
           </div>
-      </div>      
+      </div>       
     </div>
 </section>
 <!--  -->
@@ -406,7 +406,7 @@
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
-        <div class="row justify-content-center my-2">
+        <div class="row justify-content-center my-2 mb-5">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
                   <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
